--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <my-app>Loading...</my-app>
+    <destination-selector>Loading departure places</destination-selector>
 </body>
 
 </html>
