Update city selectors

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <destination-selector>Loading departure places</destination-selector>
+    <city-selector>Loading cities</city-selector>
 </body>
 
 </html>
