Finish base page functionality

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
 
 <head>
     <base href="/">
-    <title>Angular With Webpack</title>
+    <title>Cheap flights from Ryanair</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
