Update project structure

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-    <city-selector>Loading cities</city-selector>
+    <city-selector>Loading cities...</city-selector>
+    <date-selector>Loading dates...</date-selector>
+    <flight-selector>Loading flights...</flight-selector>
+    <page-controls></page-controls>
 </body>
 
 </html>
