Update controls module

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <header-module>Loading header...</header-module>
     <city-selector>Loading cities...</city-selector>
     <date-selector>Loading dates...</date-selector>
     <flight-selector>Loading flights...</flight-selector>
